@@ -4,10 +4,8 @@ import stroom.datasource.api.v2.FieldType;
 import stroom.datasource.api.v2.QueryField;
 import stroom.expression.api.DateTimeSettings;
 import stroom.expression.api.UserTimeZone;
-import stroom.query.api.v2.ExpressionOperator;
 import stroom.query.common.v2.ExpressionPredicateFactory.ValueFunctionFactories;
 import stroom.util.date.DateUtil;
-import stroom.util.filter.StringPredicateFactory;
 
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.Test;
@@ -21,7 +19,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -117,6 +114,32 @@ class TestExpressionPredicateFactory {
                                 "this_is_my_feed"),
                         List.of("NOT_THIS_IS_MY_FEED", "NOT_THIS_IS_MY_FEED_NOT", "THIS_IS_MY_FEED_NOT")),
 
+                makeStringMatchTest("Greater than",
+                        ">DD",
+                        List.of("EE",
+                                "FF"),
+                        List.of("CC", "DD")),
+
+                makeStringMatchTest("Greater than or equals",
+                        ">=DD",
+                        List.of("DD",
+                                "EE",
+                                "FF"),
+                        List.of("CC")),
+
+                makeStringMatchTest("Less than",
+                        "<DD",
+                        List.of("BB",
+                                "CC"),
+                        List.of("DD", "EE")),
+
+                makeStringMatchTest("Less than or equals",
+                        "<=DD",
+                        List.of("BB",
+                                "DD",
+                                "DD"),
+                        List.of("EE")),
+
                 makeStringMatchTest("Exact match (case sensitive)",
                         "==this_is_my_feed",
                         List.of("this_is_my_feed"),
@@ -210,8 +233,9 @@ class TestExpressionPredicateFactory {
                 makeStringMatchTest("Word boundary match 5",
                         "?CPSP",
                         List.of("CountPipelineSQLPipe",
-                                "CountPipelineSwimPipe"),
-                        List.of("CountPipelineSoQueueLongPipe")),
+                                "CountPipelineSwimPipe",
+                                "CountPipelineSoQueueLongPipe"),
+                        List.of("CountPipelineSoQueueLong")),
 
                 makeStringMatchTest("Word boundary match 6 (camel + delimited) ",
                         "?JDCN",
@@ -251,6 +275,14 @@ class TestExpressionPredicateFactory {
                                 "a99_this_is_my_feed",
                                 "IS_THIS_IS_a99_FEED"),
                         List.of("TXHIS_IS_MY_FEED", "timf", "TIMF")),
+
+                makeStringMatchTest("Word boundary match (numbers) 2",
+                        "?TIM",
+                        List.of("THIS_IS_MY_FEED_a99",
+                                "a99_this_is_my_feed",
+                                "TXHIS_IS_MY_FEED",
+                                "IS_THIS_IS_a99_MY_FEED"),
+                        List.of("IS_THIS_IS_a99_A_FEED", "timf", "TIMF")),
 
                 makeStringMatchTest("Single letter (lower case)",
                         "b",
@@ -378,10 +410,17 @@ class TestExpressionPredicateFactory {
         testWildcardReplacement("th\\*is", "th*is");
         testWildcardReplacement("th\\?is", "th?is");
         testWildcardReplacement("th\\is", "th\\is");
+        testWildcardReplacement("*user1 (xxx) yyy*", ".*user1\\Q \\E\\Q(\\Exxx\\Q)\\E\\Q \\Eyyy.*");
     }
 
     private void testWildcardReplacement(final String in, final String expected) {
-        assertThat(ExpressionPredicateFactory.makePattern(in)).isEqualTo(expected);
+        final String out;
+        if (ExpressionPredicateFactory.containsWildcard(in)) {
+            out = ExpressionPredicateFactory.replaceWildcards(in);
+        } else {
+            out = ExpressionPredicateFactory.unescape(in);
+        }
+        assertThat(out).isEqualTo(expected);
     }
 
     private void doStringMatchTest(final String userInput,
@@ -389,10 +428,10 @@ class TestExpressionPredicateFactory {
                                    final List<String> expectedNonMatches) {
 
         LOGGER.info("Testing input [{}]", userInput);
-        final List<String> actualMatches = Stream.concat(expectedMatches.stream(),
-                        expectedNonMatches.stream())
-                .filter(createStringFieldPredicate(userInput))
-                .collect(Collectors.toList());
+        final List<String> actualMatches = filterAndSortStrings(
+                userInput,
+                Stream.concat(expectedMatches.stream(), expectedNonMatches.stream()))
+                .toList();
 
         assertThat(actualMatches)
                 .containsExactlyInAnyOrderElementsOf(expectedMatches);
@@ -400,24 +439,18 @@ class TestExpressionPredicateFactory {
         final String negatedInput = StringPredicateFactory.NOT_OPERATOR_STR + userInput;
 
         LOGGER.info("Testing negated input [{}]", negatedInput);
-        final List<String> actualNegatedMatches = Stream.concat(expectedMatches.stream(), expectedNonMatches.stream())
-                .filter(createStringFieldPredicate(negatedInput))
-                .collect(Collectors.toList());
+        final List<String> actualNegatedMatches = filterAndSortStrings(
+                negatedInput,
+                Stream.concat(expectedMatches.stream(), expectedNonMatches.stream()))
+                .toList();
 
         assertThat(actualNegatedMatches)
                 .containsExactlyInAnyOrderElementsOf(expectedNonMatches);
     }
 
-    private Predicate<String> createStringFieldPredicate(final String userInput) {
-        final Optional<ExpressionOperator> simpleStringExpressionParser = SimpleStringExpressionParser
-                .create(new SingleFieldProvider("test"), userInput);
-        if (simpleStringExpressionParser.isEmpty()) {
-            return string -> true;
-        }
-
-        final Optional<Predicate<String>> optionalValuesPredicate = new ExpressionPredicateFactory(null)
-                .create(simpleStringExpressionParser.orElseThrow(), TEXT_VALUE_FUNCTION_FACTORIES, null);
-        return string -> optionalValuesPredicate.orElseThrow().test(string);
+    private Stream<String> filterAndSortStrings(final String userInput, final Stream<String> stream) {
+        return new ExpressionPredicateFactory()
+                .filterAndSortStream(stream, userInput, Optional.of(Comparator.nullsFirst(Comparator.naturalOrder())));
     }
 
     private DynamicTest makeDateMatchTest(final String testName,
@@ -434,10 +467,10 @@ class TestExpressionPredicateFactory {
                                  final List<String> expectedNonMatches) {
 
         LOGGER.info("Testing input [{}]", userInput);
-        final List<String> actualMatches = Stream.concat(expectedMatches.stream(),
-                        expectedNonMatches.stream())
-                .filter(createDateFieldPredicate(userInput))
-                .collect(Collectors.toList());
+        final List<String> actualMatches = filterAndSortDates(
+                userInput,
+                Stream.concat(expectedMatches.stream(), expectedNonMatches.stream()))
+                .toList();
 
         assertThat(actualMatches)
                 .containsExactlyInAnyOrderElementsOf(expectedMatches);
@@ -445,29 +478,28 @@ class TestExpressionPredicateFactory {
         final String negatedInput = StringPredicateFactory.NOT_OPERATOR_STR + userInput;
 
         LOGGER.info("Testing negated input [{}]", negatedInput);
-        final List<String> actualNegatedMatches = Stream.concat(expectedMatches.stream(), expectedNonMatches.stream())
-                .filter(createDateFieldPredicate(negatedInput))
-                .collect(Collectors.toList());
+        final List<String> actualNegatedMatches = filterAndSortDates(
+                negatedInput,
+                Stream.concat(expectedMatches.stream(), expectedNonMatches.stream()))
+                .toList();
 
         assertThat(actualNegatedMatches)
                 .containsExactlyInAnyOrderElementsOf(expectedNonMatches);
     }
 
-    private Predicate<String> createDateFieldPredicate(final String userInput) {
-        final Optional<ExpressionOperator> simpleStringExpressionParser = SimpleStringExpressionParser
-                .create(new SingleFieldProvider("test"), userInput);
-        if (simpleStringExpressionParser.isEmpty()) {
-            return string -> true;
-        }
-
+    private Stream<String> filterAndSortDates(final String userInput, final Stream<String> stream) {
         final DateTimeSettings dateTimeSettings = DateTimeSettings
                 .builder()
                 .referenceTime(DateUtil.parseNormalDateTimeString("2000-01-01T00:00:00.000Z"))
                 .timeZone(UserTimeZone.utc())
                 .build();
-        final Optional<Predicate<String>> optionalValuesPredicate = new ExpressionPredicateFactory(null)
-                .create(simpleStringExpressionParser.orElseThrow(), DATE_VALUE_FUNCTION_FACTORIES, dateTimeSettings);
-        return string -> optionalValuesPredicate.orElseThrow().test(string);
+        return new ExpressionPredicateFactory().filterAndSortStream(
+                stream,
+                userInput,
+                new SingleFieldProvider("test"),
+                DATE_VALUE_FUNCTION_FACTORIES,
+                dateTimeSettings,
+                Optional.of(Comparator.naturalOrder()));
     }
 
     private void doComparatorTest(final String userInput,
