@@ -16,7 +16,12 @@
 
 package stroom.task.impl;
 
+import stroom.expression.api.DateTimeSettings;
 import stroom.node.api.NodeInfo;
+import stroom.query.common.v2.ExpressionPredicateFactory;
+import stroom.query.common.v2.FieldProviderImpl;
+import stroom.query.common.v2.SimpleStringExpressionParser.FieldProvider;
+import stroom.query.common.v2.ValueFunctionFactoriesImpl;
 import stroom.security.api.SecurityContext;
 import stroom.security.api.UserIdentity;
 import stroom.security.shared.AppPermission;
@@ -29,9 +34,6 @@ import stroom.task.shared.TaskId;
 import stroom.task.shared.TaskProgress;
 import stroom.task.shared.TaskProgress.FilterMatchState;
 import stroom.util.NullSafe;
-import stroom.util.filter.FilterFieldMapper;
-import stroom.util.filter.FilterFieldMappers;
-import stroom.util.filter.QuickFilterPredicateFactory;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 import stroom.util.logging.LogUtil;
@@ -59,32 +61,39 @@ class TaskManagerImpl implements TaskManager {
 
     private static final LambdaLogger LOGGER = LambdaLoggerFactory.getLogger(TaskManagerImpl.class);
 
-    public static final FilterFieldMappers<TaskProgress> FIELD_MAPPERS = FilterFieldMappers.of(
-            FilterFieldMapper.of(FindTaskProgressCriteria.FIELD_DEF_NODE, TaskProgress::getNodeName),
-            FilterFieldMapper.of(FindTaskProgressCriteria.FIELD_DEF_NAME, TaskProgress::getTaskName),
-            FilterFieldMapper.of(FindTaskProgressCriteria.FIELD_DEF_USER, (TaskProgress taskProgress) ->
-                    NullSafe.get(taskProgress, TaskProgress::getUserRef, UserRef::getDisplayName)),
-            FilterFieldMapper.of(FindTaskProgressCriteria.FIELD_DEF_SUBMIT_TIME, (TaskProgress taskProgress) ->
-                    Instant.ofEpochMilli(taskProgress.getSubmitTimeMs()).toString()),
-            FilterFieldMapper.of(FindTaskProgressCriteria.FIELD_DEF_INFO, TaskProgress::getTaskInfo)
-    );
+    private static final ValueFunctionFactoriesImpl<TaskProgress> VALUE_FUNCTION_FACTORIES =
+            new ValueFunctionFactoriesImpl<TaskProgress>()
+                    .put(FindTaskProgressCriteria.FIELD_DEF_NODE, TaskProgress::getNodeName)
+                    .put(FindTaskProgressCriteria.FIELD_DEF_NAME, TaskProgress::getTaskName)
+                    .put(FindTaskProgressCriteria.FIELD_DEF_USER, (TaskProgress taskProgress) ->
+                            NullSafe.get(taskProgress, TaskProgress::getUserRef, UserRef::getDisplayName))
+                    .put(FindTaskProgressCriteria.FIELD_DEF_SUBMIT_TIME, (TaskProgress taskProgress) ->
+                            Instant.ofEpochMilli(taskProgress.getSubmitTimeMs()).toString())
+                    .put(FindTaskProgressCriteria.FIELD_DEF_INFO, TaskProgress::getTaskInfo);
+    private static final FieldProvider FIELD_PROVIDER =
+            new FieldProviderImpl(FindTaskProgressCriteria.FIELD_DEFINITIONS);
+
 
     private final SessionIdProvider sessionIdProvider;
     private final SecurityContext securityContext;
     private final ExecutorProviderImpl executorProvider;
     private final TaskRegistry taskRegistry;
     private final String thisNodeName;
+    private final ExpressionPredicateFactory expressionPredicateFactory;
 
     @Inject
     TaskManagerImpl(final NodeInfo nodeInfo,
                     final SessionIdProvider sessionIdProvider,
                     final SecurityContext securityContext,
                     final ExecutorProviderImpl executorProvider,
-                    final TaskRegistry taskRegistry) {
+                    final TaskRegistry taskRegistry,
+                    final ExpressionPredicateFactory expressionPredicateFactory) {
         this.sessionIdProvider = sessionIdProvider;
         this.securityContext = securityContext;
         this.executorProvider = executorProvider;
         this.taskRegistry = taskRegistry;
+        this.expressionPredicateFactory = expressionPredicateFactory;
+
         // Node name is from read-only config, so we can hold it as an instance variable
         // on this singleton
         this.thisNodeName = nodeInfo.getThisNodeName();
@@ -215,7 +224,11 @@ class TaskManagerImpl implements TaskManager {
         final String nameFilter = NullSafe.get(findTaskProgressCriteria, FindTaskProgressCriteria::getNameFilter);
         if (!NullSafe.isBlankString(nameFilter)) {
             LOGGER.debug("Using nameFilter: '{}'", nameFilter);
-            fuzzyMatchPredicate = QuickFilterPredicateFactory.createFuzzyMatchPredicate(nameFilter, FIELD_MAPPERS);
+            fuzzyMatchPredicate = expressionPredicateFactory.create(
+                    nameFilter,
+                    FIELD_PROVIDER,
+                    VALUE_FUNCTION_FACTORIES,
+                    DateTimeSettings.builder().build());
         } else {
             LOGGER.debug("No nameFilter, match all");
             fuzzyMatchPredicate = taskProgress -> true;
@@ -241,7 +254,7 @@ class TaskManagerImpl implements TaskManager {
                 .filter(sessionIdPredicate)
                 .map(taskContext ->
                         buildFilteredTaskProgress(timeNowMs, taskContext, fuzzyMatchPredicate))
-                .collect(Collectors.toList());
+                .toList();
 
         // For DEV testing uncomment this line to send dummy data to UI so you have some thing to
         // look at in the UI.
@@ -414,6 +427,6 @@ class TaskManagerImpl implements TaskManager {
                 null);
 
         return Stream.concat(colourTasks.stream(), Stream.of(orphanedTask))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
