@@ -7,6 +7,7 @@ import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiPredicate;
+import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -108,7 +109,7 @@ public class PredicateUtil {
         } else {
             final List<Predicate<String>> predicates = Arrays.stream(filters)
                     .map(String::trim)
-                    .filter(part -> part.length() > 0)
+                    .filter(part -> !part.isEmpty())
                     .map(part -> createWildCardedFilterPredicate(part, true, isCaseSensitive))
                     .collect(Collectors.toList());
             return orPredicates(predicates, str -> false);
@@ -124,7 +125,7 @@ public class PredicateUtil {
         final int count = NullSafe.size(predicates);
         Predicate<T> combinedPredicate = null;
         if (count == 1) {
-            combinedPredicate = predicates.get(0);
+            combinedPredicate = predicates.getFirst();
         } else if (count == 2) {
             combinedPredicate = andPredicates(predicates.get(0), predicates.get(1));
         } else if (count > 2) {
@@ -144,7 +145,7 @@ public class PredicateUtil {
         final int count = NullSafe.size(predicates);
         Predicate<T> combinedPredicate = null;
         if (count == 1) {
-            combinedPredicate = predicates.get(0);
+            combinedPredicate = predicates.getFirst();
         } else if (count == 2) {
             combinedPredicate = orPredicates(predicates.get(0), predicates.get(1));
         } else if (count > 2) {
@@ -194,6 +195,10 @@ public class PredicateUtil {
                 return predicate1.or(predicate2);
             }
         }
+    }
+
+    public static <T> Predicate<T> get(final Optional<Predicate<T>> optionalPredicate) {
+        return optionalPredicate.orElse(x -> true);
     }
 
     /**
